# nullifier-oracle-service

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  Readme.md  deny.toml  justfile  keygen_13.zkey
.github/workflows/: audit.yml  build-and-push-key-gen.yml  build-and-push-mock-anvil-auth-tree.yml  build-and-push-oprf-key-gen.yml  build-and-push-oprf-service-example.yml  build-and-push-oprf-service-setup.yml  build-and-push-oprf-service.yml  build-and-push-smart-contract-mock.yml  build-and-push.yml  circom_test.yml  contract_test.yml  noir_test.yml  rolling.yml  rust_lint.yml  rust_test.yml
ark-babyjubjub/: Cargo.toml  Readme.md
ark-babyjubjub/src/: lib.rs
ark-babyjubjub/src/constraints/: mod.rs
ark-babyjubjub/src/curves/: mod.rs
ark-babyjubjub/src/fields/: tests.rs
ark-serde-compat/: Cargo.toml
ark-serde-compat/src/: groth16.rs  lib.rs
circom/: .gitignore  bench_dummy.circom  nullifier.vk.json  query.vk.json  query.zkey
circom/babyjubjub/: babyjubjub.circom  correct_sub_group.circom
circom/circomlib/: bitify.circom  ecscalarmul_bench.circom
circom/client_side_proofs/: oprf_delegate.circom  oprf_nullifier.circom  oprf_query.circom  oprf_rpid_query.circom
circom/eddsa_poseidon2/: eddsaposeidon2.circom  eddsaposeidon2_cofactored.circom
circom/encode_to_curve/: encode_to_curve.circom  encode_to_curve_test.circom
circom/encode_to_curve_babyjj/: encode_to_curve_babyjj.circom  encode_to_curve_babyjj_bench.circom  encode_to_curve_babyjj_test.circom
circom/inverse_or_zero/: inverse_or_zero.circom
circom/main/: OPRFKeyGenProof.circom  OPRFNullifierProof.circom  OPRFNullifierProof.vk.json  OPRFNullifierProof.zkey  OPRFQueryProof.circom  OPRFQueryProof.vk.json  OPRFQueryProof.zkey
circom/merkle_tree/: binary_merkle_root.circom
circom/oprf_keys/: keygen.circom  keygen_single_party.circom
contracts/: KeyGen.json  OprfKeyRegistry.json  RpRegistry.json  abi.json  foundry.toml  gasless.md  generate_oprf_nullifier_contract.sh  remappings.txt
contracts/src/: KeyGen.sol  (+10 more)
data/: pk0  pk1  pk2
docs/: oprf.typst  preamble.typst  references.bib
eddsa/: Cargo.toml  Readme.md
eddsa-babyjubjub/: Cargo.toml  Readme.md
eddsa-babyjubjub/src/: lib.rs
eddsa/src/: lib.rs
oprf-client/: Cargo.toml
oprf-client-example/: Cargo.toml
oprf-client-example/src/: lib.rs
oprf-client/src/: config.rs  lib.rs  nonblocking.rs  serialization.rs  sessions.rs  tokio.rs  types.rs  ws.rs  zk.rs
oprf-core/: Cargo.toml
oprf-core/benches/: oprf.rs  proof.json  public.json
oprf-core/src/: credentials.rs  ddlog_equality.rs  ddlog_equality_shamir.rs  dlog_equality.rs  keygen.rs  lib.rs  oprf.rs  shamir.rs
oprf-core/src/ark_serde_compat/: groth16.rs  mod.rs
oprf-core/src/ddlog_equality/: additive.rs  shamir.rs
oprf-core/src/keys/: keygen.rs
oprf-core/src/oprf/: client.rs  mappings.rs  server.rs
oprf-core/src/proof_input_gen/: delegate.rs  mod.rs  nullifier.rs  query.rs  rpid_query.rs
oprf-dev-client/: Cargo.toml
oprf-dev-client/benches/: ark_parse.rs
oprf-dev-client/src/: endless_run.rs  main.rs
oprf-example-client/: Cargo.toml
oprf-integration-test-gasless/: package.json  test-gasless.ts  tsconfig.json
oprf-key-gen/: Cargo.toml
oprf-service/: Cargo.toml
oprf-service-example/: Cargo.toml
oprf-service-world/: Cargo.toml
oprf-service-world/src/: auth.rs  config.rs  lib.rs  metrics.rs  services.rs
oprf-service-world/src/auth/: merkle_watcher.rs  oprf.rs
oprf-service-world/src/services/: merkle_watcher.rs  oprf.rs
oprf-service/deploy/: docker-compose.yml
oprf-service/src/: api.rs  config.rs  groth16.rs  lib.rs  metrics.rs  oprf_key_registry.rs  rp_registry.rs  services.rs  telemetry.rs
oprf-service/src/api/: errors.rs  health.rs  info.rs  v1.rs  ws.rs
oprf-service/src/api/v1/: oprf.rs
oprf-service/src/services/: chain_watcher.rs  crypto_device.rs  event_handler.rs  key_event_watcher.rs  merkle_watcher.rs  open_sessions.rs  oprf.rs  oprf_key_material_store.rs  rp_material_store.rs  secret_gen.rs  secret_manager.rs  session_store.rs  signature_history.rs
oprf-service/src/services/chain_watcher/: dummy_chain_watcher.rs  http_mock.rs  test.rs
oprf-service/src/services/crypto_device/: dlog_storage.rs  key_gen.rs  zk.rs
oprf-service/src/services/key_event_watcher/: alloy_key_gen_watcher.rs
oprf-service/src/services/merkle_watcher/: alloy_merkle_watcher.rs  real.rs  test.rs
oprf-service/src/services/secret_gen/: tests.rs
oprf-service/src/services/secret_manager/: aws.rs  local.rs  test.rs
oprf-test/: Cargo.toml
oprf-test/src/: credentials.rs  health_checks.rs  init_rp_registry.rs  key_gen_sc_mock.rs  lib.rs  localstack.rs  oprf.rs  oprf_key_registry_scripts.rs  rp_registry_scripts.rs  sc_mock.rs  test_secret_manager.rs  test_setup_utils.rs  world_id_protocol_mock.rs
oprf-test/tests/: tests.rs
oprf-types/: Cargo.toml
oprf-types/src/: api.rs  chain.rs  crypto.rs  lib.rs  sc_mock.rs
oprf-types/src/api/: v1.rs
oprf-world-client/: Cargo.toml
oprf-world-client/src/: lib.rs
oprf-world-types/: Cargo.toml
oprf-world-types/src/: lib.rs
oprf-world-types/src/api/: v1.rs
oprf-world-types/src/proof_inputs/: nullifier.rs  query.rs
oprf-zk/: Cargo.toml
oprf-zk/src/: groth16_serde.rs  lib.rs  proof_input.rs
oprf-zk/src/proof_inputs/: nullifier.rs
poseidon2/: Cargo.toml
poseidon2/benches/: poseidon2.rs
poseidon2/solidity/: poseidon2_t2.sol  poseidon2_t2_opt.sol
poseidon2/src/: lib.rs  merkle_tree.rs  params.rs  poseidon2.rs
poseidon2/src/params/: bn254.rs  bn254_t12.rs  bn254_t16.rs  bn254_t8.rs
serde-compat/: Cargo.toml
serde-compat/src/: lib.rs
smart-contract-mock/: Cargo.toml
smart-contract-mock/src/: api.rs  config.rs  lib.rs  merkle.rs  services.rs
smart-contract-mock/src/api/: admin.rs  errors.rs  health.rs  key_gen.rs  oprf.rs  peers.rs  public_key_registry.rs  rp_registry.rs
smart-contract-mock/src/services/: merkle_registry.rs  peer_key_registry.rs  pk_registry.rs  rp_key_gen.rs  rp_registry.rs
solidity/: hardhat.config.ts  package-lock.json  package.json
(+145 files in other folders)
