[workspace]
members = [
    "ark-babyjubjub",
    "ark-serde-compat",
    "eddsa-babyjubjub",
    "oprf-client",
    "oprf-core",
    "oprf-service",
    "oprf-test",
    "oprf-types",
    "poseidon2",
    "smart-contract-mock"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/nullifier-oracle-service"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
ark-algebra-test-templates = "0.5"
ark-babyjubjub = { path = "ark-babyjubjub" }
ark-bn254 = { version = "0.5.0" }
ark-curve-constraint-tests = "0.5"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = { version = "0.5.0" }
ark-relations = "0.5"
ark-serde-compat = { path = "ark-serde-compat" }
ark-serialize = "0.5"
ark-std = "0.5.0"
async-trait = "0.1.89"
aws-config = "1.8.6"
aws-sdk-secretsmanager = "1.88.0"
axum = "0.8.4"
axum-test = "18.1.0"
blake3 = "1.8"
circom-types = { git = "https://github.com/TaceoLabs/co-snarks.git", default-features = false }
clap = "4.5.48"
criterion = "0.7.0"
eddsa-babyjubjub = { path = "eddsa-babyjubjub" }
eyre = { version = "0.6" }
futures = "0.3.31"
git-version = "0.3.9"
groth16 = { git = "https://github.com/TaceoLabs/groth16.git" }
http = "1.3.1"
humantime = "2.2.0"
itertools = "0.14"
k256 = "0.13"
metrics = "0.24.2"
nodes-telemetry = { git = "https://github.com/TaceoLabs/nodes-telemetry.git", rev = "06f4f13"}
num-bigint = "0.4.5"
num-traits = "0.2.18"
oprf-client = { path = "oprf-client" }
oprf-core = { path = "oprf-core" }
oprf-service = { path = "oprf-service" }
oprf-types = { path = "oprf-types" }
parking_lot = "0.12.4"
poseidon2 = { path = "poseidon2" }
rand_chacha = { version = "0.3" }
rand = { version = "0.8" }
reqwest = { version = "0.12" }
rustls = "0.23.31"
serde_json = { version = "1" }
serde = { version = "1" }
smart-contract-mock = { path = "smart-contract-mock" }
tempfile = "3.22.0"
thiserror = { version = "2" }
tokio-tungstenite = "0.27.0"
tokio-util = "0.7.16"
tokio = { version = "1.47" }
tower-http = "0.6.6"
tracing-subscriber = { version = "0.3" }
tracing = { version = "0.1" }
uuid = { version = "1.18.0" }
witness = { git = "https://github.com/TaceoLabs/circom-witness-rs.git", branch = "dev" }
zeroize = "1"

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
incremental = false
debug = true
