[workspace]
resolver = "3"
members = [
  "oprf-client",
  "oprf-core",
  "oprf-dev-client",
  "oprf-service",
  "oprf-test",
  "oprf-types",
  "oprf-world-types"
]

[workspace.package]
authors = ["TACEO GmbH <hello@taceo.io>"]
edition = "2024"
rust-version = "1.91"
readme = "./README.md"
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/nullifier-oracle-service"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
alloy = { version = "1", default-features = false }
ark-algebra-test-templates = "0.5"
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-bn254 = { version = "0.5" }
ark-curve-constraint-tests = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-r1cs-std = { version = "0.5" }
ark-relations = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
async-trait = "0.1"
aws-config = "1"
aws-sdk-secretsmanager = "1"
axum = "0.8"
axum-test = "18"
blake3 = "1"
circom-types = { git = "https://github.com/TaceoLabs/circom-helpers.git", rev = "6e12729dc3a35425c152e474e8e9b48f73da75b5", version = "0.1", default-features = false }
circom-witness-rs = { version = "0.2.1" }
clap = "4"
criterion = "0.7"
eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "0.5" }
eyre = { version = "0.6" }
futures = "0.3"
git-version = "0.3"
groth16 = { git = "https://github.com/TaceoLabs/groth16.git" }
groth16-material = { git = "https://github.com/TaceoLabs/circom-helpers.git", rev = "6e12729dc3a35425c152e474e8e9b48f73da75b5", default-features = false, features = [
  "circom"
] }
hex = "0.4"
http = "1"
humantime = "2"
itertools = "0.14"
k256 = "0.13"
metrics = "0.24"
nodes-telemetry = { git = "https://github.com/TaceoLabs/nodes-telemetry.git", rev = "00824cd" }
num-bigint = "0.4"
num-traits = "0.2"
oprf-client = { path = "oprf-client" }
oprf-core = { path = "oprf-core", default-features = false }
oprf-service = { path = "oprf-service" }
oprf-test = { path = "oprf-test" }
oprf-types = { path = "oprf-types" }
oprf-world-types = { path = "oprf-world-types" }
parking_lot = "0.12"
poseidon2 = { package = "taceo-poseidon2", version = "0.1" }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
ruint = "1.17"
rustls = "0.23"
secrecy = "0.10"
serde = { version = "1" }
serde_json = { version = "1" }
taceo-ark-serde-compat = { git = "https://github.com/TaceoLabs/circom-helpers.git", rev = "6e12729dc3a35425c152e474e8e9b48f73da75b5", version = "0.2", default-features = false }
thiserror = { version = "2" }
tokio = { version = "1" }
tokio-util = "0.7"
tower-http = "0.6"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1" }
world-id-primitives = { git = "https://github.com/worldcoin/world-id-protocol", rev = "a1bd07e" }  # if this gets updated, also update indexer docker tags
zeroize = "1"

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
