[package]
name = "ark-babyjubjub"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
description = "A Twisted Edwards curve defined over the scalar field of the BN254 curve, compatible with the Baby Jubjub impl in Circom."

[dependencies]
ark-bn254 = { workspace = true, features = ["scalar_field"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true, optional = true }
ark-std = { workspace = true }

[dev-dependencies]
ark-algebra-test-templates = { workspace = true }
ark-curve-constraint-tests = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }

[features]
default = []
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn254/std"]
r1cs = ["ark-r1cs-std"]
asm = ["ark-ff/asm"]
