[package]
name = "ark-serde-compat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec = "0.5.0"
ark-babyjubjub = { path = "../ark-babyjubjub" }
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = "2.0.16"
