[package]
name = "ark-serde-compat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-ec.workspace = true
ark-groth16.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
