[package]
name = "eddsa-babyjubjub"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-babyjubjub = { path = "../ark-babyjubjub" }
ark-ff = { workspace = true}
ark-ec = { workspace = true}
blake3 = "1.8"
num-bigint = "0.4.3"
rand = { workspace = true}
poseidon2 = { path = "../poseidon2" }
zeroize = "1"
serde = { workspace = true, features = ["derive"] }
ark-serde-compat = { path = "../ark-serde-compat" }
