[package]
name = "eddsa-babyjubjub"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true}
ark-ff = { workspace = true}
ark-serde-compat = { workspace = true }
ark-serialize = { workspace = true }
blake3 = { workspace = true }
eyre = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true }
rand = { workspace = true}
serde = { workspace = true, features = ["derive"] }
zeroize = { workspace = true }
