[package]
name = "oprf-client-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
oprf-client = { workspace = true }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
poseidon2.workspace = true
rand.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
