[package]
name = "oprf-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
circom-types = { workspace = true, features = [
  "bn254",
  "groth16",
  "proof",
  "verification-key"
] }
eyre.workspace = true
futures.workspace = true
groth16 = { workspace = true }
groth16-material = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
rand.workspace = true
reqwest = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros"
], optional = true }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[features]
default = ["embed-zkeys", "tokio"]
embed-zkeys = []
tokio = ["dep:tokio"]
