[package]
name = "oprf-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true }
eddsa-babyjubjub = { workspace = true }
itertools = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true }
rand_chacha.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "oprf"
harness = false
