[package]
name = "oprf-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bench]]
harness = false
name = "oprf"
required-features = ["additive", "server"]

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true }
ark-serialize = { workspace = true }
blake3 = { workspace = true }
eddsa-babyjubjub = { workspace = true }
itertools = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle = "2"
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["server"]
additive = []
server = []
