[package]
name = "oprf-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bench]]
harness = false
name = "oprf"
required-features = ["additive", "server"]

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
blake3 = { workspace = true }
itertools = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle = "2"
taceo-ark-serde-compat = { workspace = true, features = ["babyjubjub"] }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
circom-types.workspace = true
criterion = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["server"]
additive = []
server = []
