[package]
name = "oprf-service-world"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-groth16.workspace = true
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
axum = { workspace = true }
circom-types = { workspace = true, features = ["bn254", "groth16", "zkey"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures = { workspace = true }
humantime = { workspace = true }
nodes-telemetry = { workspace = true }
oprf-service = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
parking_lot = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum-test = { workspace = true }
eddsa-babyjubjub = { workspace = true }
oprf-client = { workspace = true }
oprf-test = { workspace = true }
poseidon2 = { workspace = true }
testcontainers-modules = { version = "0.13", features = ["localstack"] }
