[package]
name = "oprf-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[features]
default = ["mock-chain-watcher"]
file-secret-manager = []
mock-chain-watcher = ["oprf-types/mock-chain-watcher"]

[dependencies]
ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serde-compat = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
git-version = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
metrics-exporter-dogstatsd = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-exporter-statsd = { workspace = true }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
parking_lot = { workspace = true }
rand.workspace = true
reqwest = { version = "0.12.23", features = ["json"] }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
telemetry-batteries = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "cors", "trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum-test = { workspace = true }
