[package]
name = "oprf-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["ws"] }
ciborium = { workspace = true }
circom-types = { workspace = true, features = ["bn254", "groth16", "zkey"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures = { workspace = true }
git-version = { workspace = true }
groth16-material = { workspace = true, features = ["circom"] }
http = { workspace = true }
humantime.workspace = true
itertools = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
metrics = { workspace = true }
oprf-core = { workspace = true }
oprf-types = { workspace = true }
parking_lot = { workspace = true }
rand.workspace = true
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
axum-test = { workspace = true }
eddsa-babyjubjub = { workspace = true }
oprf-client = { workspace = true }
oprf-test = { workspace = true }
poseidon2 = { workspace = true, features = ["t2", "t16"] }
testcontainers-modules = { version = "0.13", features = ["localstack"] }
