[package]
name = "oprf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws", "node-bindings"] }
ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true }
circom-types.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eddsa-babyjubjub = { workspace = true }
eyre.workspace = true
futures.workspace = true
groth16 = { workspace = true }
itertools.workspace = true
nodes-telemetry.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
oprf-client = { workspace = true }
oprf-core = { workspace = true }
oprf-service = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
oprf-zk = { workspace = true }
poseidon2 = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
reqwest = { workspace = true }
semaphore-rs-hasher = "0.5.0"
semaphore-rs-trees = "0.5.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
take_mut = "0.2.2"
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tracing.workspace = true
