[package]
name = "oprf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
circom-types.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eddsa-babyjubjub = { workspace = true }
eyre.workspace = true
futures.workspace = true
groth16 = { workspace = true }
itertools.workspace = true
nodes-telemetry.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
oprf-client = { workspace = true }
oprf-core = { workspace = true }
oprf-service = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
oprf-zk = { workspace = true }
poseidon2 = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
reqwest = { workspace = true }
serde_json = { workspace = true }
testcontainers = { version = "0.25.2", features = ["http_wait_plain", "host-port-exposure"] }
testcontainers-modules = { version = "0.13", features = ["postgres", "localstack", "anvil"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal", "sync", "time", "tokio-macros"] }
tracing.workspace = true
world-id-primitives.workspace = true
