[package]
name = "oprf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
async-trait = { workspace = true }
eddsa-babyjubjub = { workspace = true }
eyre.workspace = true
futures.workspace = true
groth16 = { workspace = true }
itertools.workspace = true
k256 = { workspace = true, features = ["ecdsa"] }
oprf-client = { workspace = true }
oprf-core = { workspace = true }
oprf-service = { workspace = true }
oprf-types = { workspace = true }
oprf-world-types = { workspace = true }
parking_lot = { workspace = true }
poseidon2 = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
regex.workspace = true
reqwest = { workspace = true }
secrecy.workspace = true
serde_json = { workspace = true }
testcontainers = { version = "0.25.2", features = [
  "host-port-exposure",
  "http_wait_plain"
] }
testcontainers-modules = { version = "0.13", features = ["anvil", "postgres"] }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros"
] }
tracing.workspace = true
world-id-primitives.workspace = true

[dev-dependencies]
serial_test = { version = "3.2", features = ["file_locks"] }
