[package]
name = "oprf-world-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true }
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff.workspace = true
circom-types = { workspace = true, features=["groth16", "proof", "bn254"]}
taceo-ark-serde-compat = { workspace = true, features=["babyjubjub"] }
eddsa-babyjubjub = { workspace = true }
groth16-material = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "serde"] }
oprf-core = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }
