[package]
name = "poseidon2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-std = { version = "0.5.0", features = ["getrandom", "std"] }
hex = "0.4.3"
